--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <style>
-        
+
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
             -webkit-appearance: none;
@@ -33,6 +33,7 @@
         input {
             background-color: transparent !important;
         }
+
             input:focus {
                 outline: none;
             }
@@ -106,16 +107,17 @@
             font-size: 11pt;
             padding: 5px;
         }
+
         .table-bordered {
             border-top-right-radius: 15px;
             border-top-left-radius: 15px;
         }
+
         .form-check-input:checked {
             background-color: #4417FA !important;
             border-color: #4417FA;
             box-shadow: 0 2px 4px 0 rgba(105, 108, 255, 0.4);
         }
-        
     </style>
 </head>
 <body>
@@ -393,7 +395,7 @@
 
                             @Html.Partial("IsEmriPartials/IsEmri_TP")
 
-                            
+
                             <table class="table table-bordered border-dark" id="BKTable" style="display:none">
 
 
@@ -692,7 +694,7 @@
         </div>
     </div>
     @Html.Partial("IsEmriPartials/RehberPartial")
-<script>
+    <script>
 
         if ($(window).width() < 600) {
             $("#divPartial2").show();
@@ -2133,7 +2135,7 @@
                             getPivot2();
                             $("#seri").val(null).trigger("input");
                             $("#tamami").hide();
-                            
+
                         })
 
                     } else {
@@ -2155,7 +2157,7 @@
                         })
 
                     }
-                
+
                 } else {
                     const Toast = Swal.mixin({
                         toast: true,
@@ -3616,7 +3618,7 @@ $.ajax({
     }
 
 //#endregion
-</script>
+    </script>
 </body>
 </html>
 
@@ -3625,3 +3627,20 @@ $.ajax({
 
 
 
+
+
+"
+<!DOCTYPE html>
+\r\n
+<html>
+\r\n
+<head>
+    \r\n
+    <title>Parametre s&#246;zl&#252;ğ&#252; 'NOVA.Controllers.UretimController' i&#231;indeki 'System.String TrpzUretim(System.String, System.String, System.String, System.String, System.String, Boolean, System.String, System.String, System.String, Int32, Boolean)' y&#246;ntemi i&#231;in null yapılamayan 'System.Boolean' t&#252;r&#252;n&#252;n 'sonMu' parametresi i&#231;in null bir giriş i&#231;eriyor. İsteğe bağlı bir parametre başvuru t&#252;r&#252;nde, null yapılabilir t&#252;rde olmalı ya da isteğe bağlı parametre olarak bildirimi yapılmalıdır.<br>Parametre adı: parameters</title>\r\n
+    <meta name=\"viewport\" content=\"width =device-width\" />\r\n
+    <style>\r\n         body {font-family:\"Verdana\";font-weight:normal;font-size: .7em;color:black;} \r\n         p {font-family:\"Verdana\";font-weight:normal;color:black;margin-top: -5px}\r\n         b {font-family:\"Verdana\";font-weight:bold;color:black;margin-top: -5px}\r\n         H1 { font-family:\"Verdana\";font-weight:normal;font-size:18pt;color:red }\r\n         H2 { font-family:\"Verdana\";font-weight:normal;font-size:14pt;color:maroon }\r\n         pre {font-family:\"Consolas\",\"Lucida Console\",Monospace;font-size:11pt;margin:0;padding:0.5em;line-height:14pt}\r\n         .marker {font-weight: bold; color: black;text-decoration: none;}\r\n         .version {color: gray;}\r\n         .error {margin-bottom: 10px;}\r\n         .expandable { text-decoration:underline; font-weight:bold; color:navy; cursor:pointer; }\r\n         @media screen and (max-width: 639px) {\r\n          pre { width: 440px; overflow: auto; white-space: pre-wrap; word-wrap: break-word; }\r\n         }\r\n         @media screen and (max-width: 479px) {\r\n          pre { width: 280px; }\r\n         }\r\n        </style>\r\n
+</head>\r\n\r\n
+<body bgcolor=\"white\">
+    \r\n\r\n            <span><H1>'/' Uygulamasında Sunucu Hatası.<hr width=100% size=1 color=silver></H1>\r\n\r\n            <h2> <i>Parametre s&#246;zl&#252;ğ&#252; 'NOVA.Controllers.UretimController' i&#231;indeki 'System.String TrpzUretim(System.String, System.String, System.String, System.String, System.String, Boolean, System.String, System.String, System.String, Int32, Boolean)' y&#246;ntemi i&#231;in null yapılamayan 'System.Boolean' t&#252;r&#252;n&#252;n 'sonMu' parametresi i&#231;in null bir giriş i&#231;eriyor. İsteğe bağlı bir parametre başvuru t&#252;r&#252;nde, null yapılabilir t&#252;rde olmalı ya da isteğe bağlı parametre olarak bildirimi yapılmalıdır.<br>Parametre adı: parameters</i> </h2></span>\r\n\r\n            <font face=\"Arial, Helvetica, Geneva, SunSans-Regular, sans-serif \">\r\n\r\n            <b> Açıklama: </b>Geçerli web isteği yürütülürken işlenmemiş özel durum oluştu. Lütfen hata ve kod içinde kaynaklandığı yer hakkında daha fazla bilgi almak için yığın izlemesini gözden geçirin.\r\n\r\n            <br><br>\r\n\r\n            <b> Özel Durum Ayrıntıları: </b>System.ArgumentException: Parametre s&#246;zl&#252;ğ&#252; 'NOVA.Controllers.UretimController' i&#231;indeki 'System.String TrpzUretim(System.String, System.String, System.String, System.String, System.String, Boolean, System.String, System.String, System.String, Int32, Boolean)' y&#246;ntemi i&#231;in null yapılamayan 'System.Boolean' t&#252;r&#252;n&#252;n 'sonMu' parametresi i&#231;in null bir giriş i&#231;eriyor. İsteğe bağlı bir parametre başvuru t&#252;r&#252;nde, null yapılabilir t&#252;rde olmalı ya da isteğe bağlı parametre olarak bildirimi yapılmalıdır.<br>Parametre adı: parameters<br><br>\r\n\r\n            <b>Kaynak Hatası:</b> <br><br>\r\n\r\n            <table width=100% bgcolor=\"#ffffcc\">\r\n               <tr>\r\n                  <td>\r\n                      <code>\r\n\r\nGe&#231;erli web isteği y&#252;r&#252;t&#252;l&#252;rken işlenmeyen bir &#246;zel durum &#252;retildi. &#214;zel durumun kaynağı ve konumuna ilişkin bilgiler aşağıdaki &#246;zel durum yığını izlemesi kullanılarak belirlenebilir.                      </code>\r\n\r\n                  </td>\r\n               </tr>\r\n            </table>\r\n\r\n            <br>\r\n\r\n            <b>Yığın İzleme:</b> <br><br>\r\n\r\n            <table width=100% bgcolor=\"#ffffcc\">\r\n               <tr>\r\n                  <td>\r\n                      <code><pre>\r\n\r\n[ArgumentException: Parametre s&#246;zl&#252;ğ&#252; &#39;NOVA.Controllers.UretimController&#39; i&#231;indeki &#39;System.String TrpzUretim(System.String, System.String, System.String, System.String, System.String, Boolean, System.String, System.String, System.String, Int32, Boolean)&#39; y&#246;ntemi i&#231;in null yapılamayan &#39;System.Boolean&#39; t&#252;r&#252;n&#252;n &#39;sonMu&#39; parametresi i&#231;in null bir giriş i&#231;eriyor. İsteğe bağlı bir parametre başvuru t&#252;r&#252;nde, null yapılabilir t&#252;rde olmalı ya da isteğe bağlı parametre olarak bildirimi yapılmalıdır.\r\nParametre adı: parameters]\r\n   System.Web.Mvc.ActionDescriptor.ExtractParameterFromDictionary(ParameterInfo parameterInfo, IDictionary`2 parameters, MethodInfo methodInfo) +527\r\n   System.Web.Mvc.ReflectedActionDescriptor.Execute(ControllerContext controllerContext, IDictionary`2 parameters) +91\r\n   System.Web.Mvc.ControllerActionInvoker.InvokeActionMethod(ControllerContext controllerContext, ActionDescriptor actionDescriptor, IDictionary`2 parameters) +27\r\n   System.Web.Mvc.Async.&lt;&gt;c.&lt;BeginInvokeSynchronousActionMethod&gt;b__9_0(IAsyncResult asyncResult, ActionInvocation innerInvokeState) +22\r\n   System.Web.Mvc.Async.WrappedAsyncResult`2.CallEndDelegate(IAsyncResult asyncResult) +29\r\n   System.Web.Mvc.Async.WrappedAsyncResultBase`1.End() +49\r\n   System.Web.Mvc.Async.AsyncControllerActionInvoker.EndInvokeActionMethod(IAsyncResult asyncResult) +32\r\n   System.Web.Mvc.Async.&lt;&gt;c__DisplayClass11_0.&lt;InvokeActionMethodFilterAsynchronouslyRecursive&gt;b__0() +58\r\n   System.Web.Mvc.Async.&lt;&gt;c__DisplayClass11_2.&lt;InvokeActionMethodFilterAsynchronouslyRecursive&gt;b__2() +228\r\n   System.Web.Mvc.Async.&lt;&gt;c__DisplayClass7_0.&lt;BeginInvokeActionMethodWithFilters&gt;b__1(IAsyncResult asyncResult) +10\r\n   System.Web.Mvc.Async.WrappedAsyncResult`1.CallEndDelegate(IAsyncResult asyncResult) +10\r\n   System.Web.Mvc.Async.WrappedAsyncResultBase`1.End() +49\r\n   System.Web.Mvc.Async.AsyncControllerActionInvoker.EndInvokeActionMethodWithFilters(IAsyncResult asyncResult) +34\r\n   System.Web.Mvc.Async.&lt;&gt;c__DisplayClass3_6.&lt;BeginInvokeAction&gt;b__4() +35\r\n   System.Web.Mvc.Async.&lt;&gt;c__DisplayClass3_1.&lt;BeginInvokeAction&gt;b__1(IAsyncResult asyncResult) +100\r\n   System.Web.Mvc.Async.WrappedAsyncResult`1.CallEndDelegate(IAsyncResult asyncResult) +10\r\n   System.Web.Mvc.Async.WrappedAsyncResultBase`1.End() +49\r\n   System.Web.Mvc.Async.AsyncControllerActionInvoker.EndInvokeAction(IAsyncResult asyncResult) +27\r\n   System.Web.Mvc.&lt;&gt;c.&lt;BeginExecuteCore&gt;b__152_1(IAsyncResult asyncResult, ExecuteCoreState innerState) +11\r\n   System.Web.Mvc.Async.WrappedAsyncVoid`1.CallEndDelegate(IAsyncResult asyncResult) +29\r\n   System.Web.Mvc.Async.WrappedAsyncResultBase`1.End() +49\r\n   System.Web.Mvc.Controller.EndExecuteCore(IAsyncResult asyncResult) +45\r\n   System.Web.Mvc.&lt;&gt;c.&lt;BeginExecute&gt;b__151_2(IAsyncResult asyncResult, Controller controller) +13\r\n   System.Web.Mvc.Async.WrappedAsyncVoid`1.CallEndDelegate(IAsyncResult asyncResult) +22\r\n   System.Web.Mvc.Async.WrappedAsyncResultBase`1.End() +49\r\n   System.Web.Mvc.Controller.EndExecute(IAsyncResult asyncResult) +26\r\n   System.Web.Mvc.Controller.System.Web.Mvc.Async.IAsyncController.EndExecute(IAsyncResult asyncResult) +10\r\n   System.Web.Mvc.&lt;&gt;c.&lt;BeginProcessRequest&gt;b__20_1(IAsyncResult asyncResult, ProcessRequestState innerState) +28\r\n   System.Web.Mvc.Async.WrappedAsyncVoid`1.CallEndDelegate(IAsyncResult asyncResult) +29\r\n   System.Web.Mvc.Async.WrappedAsyncResultBase`1.End() +49\r\n   System.Web.Mvc.MvcHandler.EndProcessRequest(IAsyncResult asyncResult) +28\r\n   System.Web.Mvc.MvcHandler.System.Web.IHttpAsyncHandler.EndProcessRequest(IAsyncResult result) +9\r\n   System.Web.CallHandlerExecutionStep.System.Web.HttpApplication.IExecutionStep.Execute() +574\r\n   System.Web.HttpApplication.ExecuteStepImpl(IExecutionStep step) +109\r\n   System.Web.HttpApplication.ExecuteStep(IExecutionStep step, Boolean&amp; completedSynchronously) +163\r\n</pre>                      </code>\r\n\r\n                  </td>\r\n               </tr>\r\n            </table>\r\n\r\n            <br>\r\n\r\n            <hr width=100% size=1 color=silver>\r\n\r\n            <b>Sürüm Bilgisi:</b>&nbsp;Microsoft .NET Framework Sürümü:4.0.30319; ASP.NET Sürümü:4.8.9191.0\r\n\r\n            </font>\r\n\r\n
+</body>\r\n
+</html>\r\n<!-- \r\n[ArgumentException]: Parametre s&#246;zl&#252;ğ&#252; &#39;NOVA.Controllers.UretimController&#39; i&#231;indeki &#39;System.String TrpzUretim(System.String, System.String, System.String, System.String, System.String, Boolean, System.String, System.String, System.String, Int32, Boolean)&#39; y&#246;ntemi i&#231;in null yapılamayan &#39;System.Boolean&#39; t&#252;r&#252;n&#252;n &#39;sonMu&#39; parametresi i&#231;in null bir giriş i&#231;eriyor. İsteğe bağlı bir parametre başvuru t&#252;r&#252;nde, null yapılabilir t&#252;rde olmalı ya da isteğe bağlı parametre olarak bildirimi yapılmalıdır.\r\nParametre adı: parameters\r\n   konum: System.Web.Mvc.ActionDescriptor.ExtractParameterFromDictionary(ParameterInfo parameterInfo, IDictionary`2 parameters, MethodInfo methodInfo)\r\n   konum: System.Web.Mvc.ReflectedActionDescriptor.Execute(ControllerContext controllerContext, IDictionary`2 parameters)\r\n   konum: System.Web.Mvc.ControllerActionInvoker.InvokeActionMethod(ControllerContext controllerContext, ActionDescriptor actionDescriptor, IDictionary`2 parameters)\r\n   konum: System.Web.Mvc.Async.AsyncControllerActionInvoker.<>c.<BeginInvokeSynchronousActionMethod>b__9_0(IAsyncResult asyncResult, ActionInvocation innerInvokeState)\r\n   konum: System.Web.Mvc.Async.AsyncResultWrapper.WrappedAsyncResult`2.CallEndDelegate(IAsyncResult asyncResult)\r\n   konum: System.Web.Mvc.Async.AsyncResultWrapper.WrappedAsyncResultBase`1.End()\r\n   konum: System.Web.Mvc.Async.AsyncControllerActionInvoker.EndInvokeActionMethod(IAsyncResult asyncResult)\r\n   konum: System.Web.Mvc.Async.AsyncControllerActionInvoker.AsyncInvocationWithFilters.<>c__DisplayClass11_0.<InvokeActionMethodFilterAsynchronouslyRecursive>b__0()\r\n   konum: System.Web.Mvc.Async.AsyncControllerActionInvoker.AsyncInvocationWithFilters.<>c__DisplayClass11_2.<InvokeActionMethodFilterAsynchronouslyRecursive>b__2()\r\n   konum: System.Web.Mvc.Async.AsyncControllerActionInvoker.<>c__DisplayClass7_0.<BeginInvokeActionMethodWithFilters>b__1(IAsyncResult asyncResult)\r\n   konum: System.Web.Mvc.Async.AsyncResultWrapper.WrappedAsyncResult`1.CallEndDelegate(IAsyncResult asyncResult)\r\n   konum: System.Web.Mvc.Async.AsyncResultWrapper.WrappedAsyncResultBase`1.End()\r\n   konum: System.Web.Mvc.Async.AsyncControllerActionInvoker.EndInvokeActionMethodWithFilters(IAsyncResult asyncResult)\r\n   konum: System.Web.Mvc.Async.AsyncControllerActionInvoker.<>c__DisplayClass3_6.<BeginInvokeAction>b__4()\r\n   konum: System.Web.Mvc.Async.AsyncControllerActionInvoker.<>c__DisplayClass3_1.<BeginInvokeAction>b__1(IAsyncResult asyncResult)\r\n   konum: System.Web.Mvc.Async.AsyncResultWrapper.WrappedAsyncResult`1.CallEndDelegate(IAsyncResult asyncResult)\r\n   konum: System.Web.Mvc.Async.AsyncResultWrapper.WrappedAsyncResultBase`1.End()\r\n   konum: System.Web.Mvc.Async.AsyncControllerActionInvoker.EndInvokeAction(IAsyncResult asyncResult)\r\n   konum: System.Web.Mvc.Controller.<>c.<BeginExecuteCore>b__152_1(IAsyncResult asyncResult, ExecuteCoreState innerState)\r\n   konum: System.Web.Mvc.Async.AsyncResultWrapper.WrappedAsyncVoid`1.CallEndDelegate(IAsyncResult asyncResult)\r\n   konum: System.Web.Mvc.Async.AsyncResultWrapper.WrappedAsyncResultBase`1.End()\r\n   konum: System.Web.Mvc.Controller.EndExecuteCore(IAsyncResult asyncResult)\r\n   konum: System.Web.Mvc.Controller.<>c.<BeginExecute>b__151_2(IAsyncResult asyncResult, Controller controller)\r\n   konum: System.Web.Mvc.Async.AsyncResultWrapper.WrappedAsyncVoid`1.CallEndDelegate(IAsyncResult asyncResult)\r\n   konum: System.Web.Mvc.Async.AsyncResultWrapper.WrappedAsyncResultBase`1.End()\r\n   konum: System.Web.Mvc.Controller.EndExecute(IAsyncResult asyncResult)\r\n   konum: System.Web.Mvc.Controller.System.Web.Mvc.Async.IAsyncController.EndExecute(IAsyncResult asyncResult)\r\n   konum: System.Web.Mvc.MvcHandler.<>c.<BeginProcessRequest>b__20_1(IAsyncResult asyncResult, ProcessRequestState innerState)\r\n   konum: System.Web.Mvc.Async.AsyncResultWrapper.WrappedAsyncVoid`1.CallEndDelegate(IAsyncResult asyncResult)\r\n   konum: System.Web.Mvc.Async.AsyncResultWrapper.WrappedAsyncResultBase`1.End()\r\n   konum: System.Web.Mvc.MvcHandler.EndProcessRequest(IAsyncResult asyncResult)\r\n   konum: System.Web.Mvc.MvcHandler.System.Web.IHttpAsyncHandler.EndProcessRequest(IAsyncResult result)\r\n   konum: System.Web.HttpApplication.CallHandlerExecutionStep.System.Web.HttpApplication.IExecutionStep.Execute()\r\n   konum: System.Web.HttpApplication.ExecuteStepImpl(IExecutionStep step)\r\n   konum: System.Web.HttpApplication.ExecuteStep(IExecutionStep step, Boolean& completedSynchronously)\r\n-->"
