Üretim/Index TP atmama sorunu giderildi.

--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -2273,7 +2273,7 @@
                     $.ajax({
                         url: '@Url.Action("TrpzUretim", "Uretim")',
                         type: 'POST',
-                        data: { "stokkodu": stok, "ISEMRINO": d[0].ISEMRINO, "SERI_NO": d[0].SERI_NO, "KULL_MIKTAR": d[0].KULL_MIKTAR, "mik2": d[0].KULL_MIKTAR2, "kontrol": kontrol, "hurdamik": hurdamik, "ikincimik1": ikincimik1, "ikincimik2": ikincimik2, "dongu": loadDongu },
+                        data: { "stokkodu": stok, "ISEMRINO": d[0].ISEMRINO, "SERI_NO": d[0].SERI_NO, "KULL_MIKTAR": d[0].KULL_MIKTAR, "mik2": d[0].KULL_MIKTAR2, "kontrol": kontrol, "hurdamik": hurdamik, "ikincimik1": ikincimik1, "ikincimik2": ikincimik2, "dongu": loadDongu,"sonMu":false },
                         error: function (data) {
                             console.log(data);
                             $("#progress2").hide();
@@ -3346,7 +3346,7 @@
       
 
         //function pdfOpen(d) {
-        //    let byteCharacters = atob(d);
+        //    let byteCharacters = atob(d);0
         //    let byteNumbers = new Array(byteCharacters.length);
         //    for (let i = 0; i < byteCharacters.length; i++) {
         //        byteNumbers[i] = byteCharacters.charCodeAt(i);
