Barkod yazdırma işlemi düzenlendi.

--- a/NOVA/Views/Shared/_Layout_GenelMenu.cshtml
+++ b/NOVA/Views/Shared/_Layout_GenelMenu.cshtml
@@ -345,7 +345,7 @@
 
         $('.menu-item .fade-item').css('opacity', '1');
 
-        if (window.innerWidth < 770)
+        if (UserAgentMobileCheck() || window.innerWidth < 770)
         {
             document.activeElement.blur();
             document.body.style.overflow = 'hidden';
@@ -357,7 +357,7 @@
     {
         document.body.style.overflow = 'auto';
 
-        $('.side-menu').css('width', (window.innerWidth < 770) ? '0' : '60px');
+        $('.side-menu').css('width', UserAgentMobileCheck() || (window.innerWidth < 770) ? '0' : '60px');
         $('.side-menu').css('border-right', 'none');
         $('.side-menu').removeClass('shadow-lg');
 
